--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,7 +87,7 @@ const categories = [
       </p>
       <div class="flex justify-center gap-4">
         <a
-          href="https://github.com/centricle/fasteners.fyi"
+          href="https://github.com/centricle/fasteners"
           class="px-6 py-3 rounded-lg bg-bp-800 text-bp-text hover:bg-bp-700 transition-colors"
         >
           View on GitHub
